Fix problems with loading resources in JARs (#541)
ClassPathResource.getFile() does not work if the resource cannot be resolved as absolute file path